add drag & drop ordering, no modifications send to server yet.

--- a/statics/partials/librairy/librairy_grid.html
+++ b/statics/partials/librairy/librairy_grid.html
@@ -13,7 +13,7 @@
 <article id="{{ pict.id }}"
          class="thumb"
          ng-class="{selected: pict.selected, active: pict.active}"
-         ng-repeat="pict in picts | filter:query track by $index">
+         ng-repeat="pict in picts | filter:query">
     <header>
         <div class="line1">
             <span class="float-right">{{ pict.name | limitTo : 20 : 0 }}</span>
