improve carousel css

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -175,14 +175,17 @@ header[role="banner"] {
     }
 }
 
-
+// carousel wrapper
+.carousel-wrapper {
+    overflow-x: hidden;
+}
 // Carousel (automatique, client side rendering)
 .carousel {
     position: absolute;
     left: 50%;
-    margin-left: -50%;
-    margin-right: -50%;
-    max-width: 100%;
+    margin-left: -5000px;
+    width: 10000px;
+    text-align: center;
     //background-color: yellow;
     margin-top: 24px;
     white-space: nowrap;
