--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -213,29 +213,21 @@ footer[role="contentinfo"] {
 // Carousel (automatique, client side rendering)
 .carousel {
     position: relative;
-    //position: absolute;
-    //left: 50%;
-    //margin-left: -5000px;
-    //width: 10000px;
-    //text-align: center;
-    //background-color: yellow;
     margin: 24px 0;
-    white-space: nowrap; // for all li to stay inline on overflow
     overflow: hidden;
-    line-height: 0; // to remove white spaces between li
     li {
-        position: relative;
+        position: absolute;
         box-sizing: border-box;
-        max-height: 100%;
-        margin: 0 3px;
-        display: inline-block;
         opacity: 0.6;
+        .transition(all 1s ease-in-out);
+        //transition: left 1s ease-in-out, opacity 1s ease-in-out ;
+        //-webkit-transition: left 1s ease-in-out, opacity 1s ease-in-out;
         &.selected {
             opacity: 1;
         }
         img {
+            display: block;
             position: relative;
-            max-height: 100%;
         }
     }
 }
