--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -219,15 +219,18 @@ footer[role="contentinfo"] {
         position: absolute;
         box-sizing: border-box;
         opacity: 0.6;
-        .transition(all 1s ease-in-out);
-        //transition: left 1s ease-in-out, opacity 1s ease-in-out ;
-        //-webkit-transition: left 1s ease-in-out, opacity 1s ease-in-out;
+        transition: left 1s ease-in-out, opacity 1s ease-in-out ;
+        -webkit-transition: left 1s ease-in-out, opacity 1s ease-in-out;
         &.selected {
             opacity: 1;
         }
         img {
             display: block;
             position: relative;
+            .transition(opacity 1s ease-in-out);
+            &.swiped {
+                opacity: 0;
+            }
         }
     }
 }
