--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -283,4 +283,10 @@ footer[role="contentinfo"] {
         }
     }
 }
+.carousel-error {
+    text-align: center;
+    font-size: 1.3em;
+    height: 400px;
+    line-height: 400px;
+}
 
