add a few styles to contact page.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -163,7 +163,7 @@ footer[role="contentinfo"] {
 }
 
 // centered main header
-#weblog, #portfolios {
+#weblog, #portfolios, #contact {
     header[role="banner"] {
         position: relative;
         height: auto;
@@ -288,5 +288,13 @@ footer[role="contentinfo"] {
     font-size: 1.3em;
     height: 400px;
     line-height: 400px;
+}
+.spinner, .info {
+    text-align: center;
+    font-size: 1.3em;
+    margin: 40px;
+    p {
+        margin-top: 40px;
+    }
 }
 
