--- a/src/less/controller.less
+++ b/src/less/controller.less
@@ -23,8 +23,11 @@
 // sprite
 //@import '@{base-css}common/sprite.less';
 
-// palette
 
+// palette
+@import './common/forms.less';
+
+// palette
 @import './common/palette.less';
 
 // layout
