--- a/src/less/common/palette.less
+++ b/src/less/common/palette.less
@@ -12,6 +12,7 @@
 @blog-code-bg: #FFF; // code blocks background
 @blog-code-text: @blog-text; // code blocks text color
 @blog-code-border: #000; // code blocks border
+@blog-red: #970000; // red text color
 
 @blog-input-border: #797979;
 //@blog-tag-bg: .degrade(#797979, #969696, #797979);
@@ -21,3 +22,33 @@
 @blog-tag-color-hover: #000;
 @blog-main-thumb-border: #797979;
 @blog-main-thumb-border-hover: #222;
+
+// forms
+@invalid-shadow: 0 0 3px #970000; // invalid form elements shadow
+@help-text: @blog-text; // help text color
+@inputs-bg: @blog-bg; // inputs (textarea, input etc.) background color
+@inputs-border: 1px solid #CCC; // inputs border
+@inputs-text-color: @blog-text; // inputs text color
+@inputs-hover-focus-shadow: 0 0 3px #000; // inputs :hover and :focus shadow
+@submit-border-color: #CCC;
+@submit-button-border: 1px solid @submit-border-color; // submit and buttons border
+@submit-button-shadow: inset 0 1px 0 rgba(255,255,255,0.2); // submit and buttons shadow
+@submit-button: @blog-text; // submit and buttons text color
+@submit-button-main: #fff; // submit and buttons text color
+@submit-button-bg: #414141; // submit and buttons background
+@submit-button-hover-focus-bg: #575757; // submit and buttons :hover and :focus background
+@submit-button-hover-focus: #000; // submit and buttons :hover and :focus text color
+@submit-button-hover-focus-shadow: 0 0 3px #000; // submit and buttons :hover and :focus shadow
+@valid: #3c763d; // valid
+@valid-border: @valid; // valid border
+//@valid-bg: #A1CDA1; // valid background
+@valid-bg: #dff0d8; // valid background
+//@invalid: #FF0000; // invalid test
+@invalid: #a94442; // invalid
+@invalid-border: @invalid; // invalid border
+//@invalid-bg: #FF6965; // invalid background
+@invalid-bg: #f2dede; // invalid background
+@warning: #8a6d3b; // warning color
+@warning-border: @warning; // warning border
+//@warning-bg: #FFCA6E; // warning background
+@warning-bg: #fcf8e3; // warning background
