add css to contact page

--- a/src/less/common/forms.less
+++ b/src/less/common/forms.less
@@ -27,6 +27,7 @@ form {
     }
 }
 input, option, select, textarea, ul.errorlist li {
+    font-family: @sans;
     width: 100%;
     border-radius: 4px;
     background: @inputs-bg;
@@ -66,7 +67,7 @@ input[type="submit"], button {
     font-family: @sans;
     font-weight: bold;
     display: inline-block;
-    border-radius: 5px;
+    border-radius: 4px;
     box-shadow: @submit-button-shadow;
     background: @submit-button-bg;
     color: @submit-button-main;
