--- a/src/less/common/palette.less
+++ b/src/less/common/palette.less
@@ -9,9 +9,9 @@
 @blog-selected-menu: #000; // selected links in main menu
 @blog-hr: #CCC; // hrules
 @blog-tags: @blog-time; // tags list
-@blog-code-bg: #FFF; // code blocks background
+@blog-code-bg: rgba(0,0,0,0.04); // code blocks background
 @blog-code-text: @blog-text; // code blocks text color
-@blog-code-border: #000; // code blocks border
+@blog-code-border: 1px solid #CCC; // code blocks border
 @blog-red: #970000; // red text color
 
 @blog-input-border: #797979;
