--- a/src/less/weblog/layout.less
+++ b/src/less/weblog/layout.less
@@ -18,8 +18,6 @@
 
     article {
         padding: 0px 16px;
-        position: relative;
-        margin-top: 4em;
         time {
             color: @blog-time;
             font-size: 0.85em;
@@ -27,11 +25,8 @@
             margin-bottom: 0.2em;
             text-indent: 0.2em;
         }
-        p {
-            margin-bottom: 1.125em;
-            &.description {
-                color: @blog-desc;
-            }
+        .description {
+            color: @blog-desc;
         }
     }
 
