--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -23,9 +23,6 @@ article {
     padding: 0px;
     position: relative;
     margin-top: 4em;
-    p {
-        margin-bottom: 1.125em;
-    }
     ul {
         padding-left: 30px;
         list-style-type: disc;
@@ -57,6 +54,8 @@ code {
 blockquote {
     padding-left: 1.5em;
     line-height: 200%;
+    border-left: 4px solid #CCC;
+    border-radius: 4px;
 }
 
 
@@ -136,7 +135,10 @@ h1, h2, h3, h4, h5, h6 {
 
     // headings
     h1, h2, h3, h4, h5, h6 {
+        margin-top: 20px;
+        margin-bottom: 10px;
         color: @blog-headings;
+        line-height: 1.1;
         a {
             text-decoration: none;
             &:hover, &:active, &:focus {
@@ -146,8 +148,22 @@ h1, h2, h3, h4, h5, h6 {
     }
     h1 {
         font-size: 1.5em;
-        line-height: 1.3em;
         margin-bottom: 0.45em;
+    }
+    header h1 {
+        margin-top: 0;
+    }
+    h2 {
+        font-size: 1.4em;
+    }
+    h3 {
+        font-size: 1.3em;
+    }
+    h4 {
+        font-size: 1.2em;
+    }
+    h5 {
+        font-size: 1.1em;
     }
 }
 
@@ -276,7 +292,7 @@ hr {
         max-width: 782px;
         margin: 1em auto 4em auto;
         p {
-            margin-bottom: 1.125em;
+            margin-bottom: 0.5em;
         }
 
     }
