--- a/src/less/weblog/layout.less
+++ b/src/less/weblog/layout.less
@@ -53,5 +53,29 @@
             }
         }
     }
-
+    // author indication
+    h6.author {
+        font-weight: normal;
+        font-style: italic;
+        text-align: right;
+        margin-top: 0.5em;
+        line-height: 1em; 
+        margin-bottom: 0.5em;
+        height: 0px;
+        border-top: 1px solid @blog-hr;
+        padding-right: 8%;
+        a {
+            display: inline-block;
+            position: relative;
+            top: -0.65em;
+            background: @blog-bg;
+            padding-right: 10px;
+            padding-left: 10px;
+            color: @blog-text;
+            font-variant: small-caps;
+            &:hover, &:active {
+                color: @blog-links-hover;
+            }
+        }
+    }
 }
