add a beginning of component for tag related posts list.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -341,9 +341,11 @@ hr {
     &::-webkit-scrollbar {
         width: 10px;
         border-radius: 3px;
+        background: @blog-bg;
     }
     &::-webkit-scrollbar-track {
         border-radius: 5px;
+        background: @blog-bg;
     }
     li {
         margin: 0 3px 50px 0;
