add a beginning of lightbox component.

--- a/src/less/common/lightbox.less
+++ b/src/less/common/lightbox.less
@@ -46,13 +46,13 @@ section#lb-main-stage1, section#lb-main-stage2 {
             #lb-next {
                 right: 0px;
                 &:hover {
-                    background: url("../images/structure/lightbox/lb-next.png") right center no-repeat;
+    //                background: url("../images/structure/lightbox/lb-next.png") right center no-repeat;
                 }
             }
             #lb-prev {
                 left: 0px;
                 &:hover {
-                    background: url("../images/structure/lightbox/lb-prev.png") left center no-repeat;
+      //              background: url("../images/structure/lightbox/lb-prev.png") left center no-repeat;
                 }
             }
         }
