one more step with lightbox

--- a/src/less/common/lightbox.less
+++ b/src/less/common/lightbox.less
@@ -8,6 +8,14 @@
     opacity: 0.8;
     z-index: 999;
 }
+#lightbox {
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
 
 section#lb-main-stage1, section#lb-main-stage2 {
     position: fixed;
