add a lightbox reducer, selector on work.

--- a/src/less/common/lightbox.less
+++ b/src/less/common/lightbox.less
@@ -15,6 +15,12 @@
     bottom: 0;
     right: 0;
     left: 0;
+    figure {
+        position: relative;
+        margin: 40px auto;
+        text-align: center;
+        display: block;
+    }
 }
 
 section#lb-main-stage1, section#lb-main-stage2 {
