--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -380,8 +380,8 @@ hr {
     font-size: 1.3em;
     text-align: center;
     img {
+        border: none;
         margin-bottom: 30px
-
     }
 }
 .red {
