improve forms css.

--- a/src/less/common/forms.less
+++ b/src/less/common/forms.less
@@ -99,6 +99,8 @@ input[type="radio"], input[type="checkbox"] {
 
 input:hover, input:focus, textarea:focus, textarea:hover, select:focus, select:hover {
     box-shadow: @inputs-hover-focus-shadow;
+    border: @inputs-border-hover-focus;
+    
 }
 input[type="submit"], button {
     font-family: @sans;
