add librairy component with few css.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -134,7 +134,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 // white background generalities
-#weblog, #portfolios, #contact, #user {
+#weblog, #portfolios, #contact, #user, #librairy {
     color: @blog-text;
     background-color: @blog-bg;
 
@@ -227,7 +227,7 @@ hr {
 }
 
 // centered main header
-#weblog, #portfolios, #contact, #user {
+#weblog, #portfolios, #contact, #user, #librairy {
     header[role="banner"] {
         position: relative;
         height: auto;
