--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -15,16 +15,28 @@
             right: 2vw;
             margin: 0 50px 0 0;
         }
-        &:after {
-            content: "";
-            clear: both;
-            height: 1px;
-            display: block;
+    }
+    #left-panel {
+        float: left;
+        display: block;
+        width: 300px;
+        height: 800px;
+        border-right: 1px solid #CCC;
+        background: #F9F9F9;
+        padding: 20px;
+        h6 {
+            font-size: 14px;
+            color: #969696;
+            font-weight: bold;
         }
     }
 
     section[role="main"] {
         min-height: 500px;
-        padding: 200px;
+        &:after {
+            content: "";
+            clear: both;
+            display: block;
+        }
     }
 }
