fix a bug with router.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -33,7 +33,7 @@
             list-style-type: disc;
         }
         li {
-            //margin: 4px 0;
+            //margin: 1px 0;
             //text-indent: 10px;
         }
         a {
@@ -43,6 +43,7 @@
             text-decoration: none;
             &:hover, &:active, &.selected {
                 background-color: #D2D2D2;
+                color: #000;
             }
         }
     }
