--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -17,12 +17,16 @@
         }
     }
     #left-panel {
-        float: left;
+        min-height: 100vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
         display: block;
         width: 300px;
-        height: 800px;
         border-right: 1px solid #CCC;
         background: #F9F9F9;
+        box-sizing: border-box;
         h6 {
             margin: 20px 15px 8px;
             font-size: 14px;
@@ -47,13 +51,38 @@
             }
         }
     }
+    #librairy-list {
+        margin-left: 300px;
+        min-height: 100vh;
+        .thumb-wrapper {
+            vertical-align: top;
+            position: relative;
+            text-align: center;
+            margin: 10px 0 0 10px;
+            display: inline-block;
+            //background: yellow;
+            font-size: 0;
+        }
+        article {
+            display: inline-block;
+            box-sizing: border-box;
+            margin: 0;
+            line-height: 0em;
+            &.selected {
+                padding: 1px;
+                border: 4px solid #575757;
+                border-radius: 4px;
+            }
+            img {
+                display: inline-block;
+                vertical-align: middle;
+                max-height: 100%;
+                max-width: 100%;
+            }
+        }
+    }
 
     section[role="main"] {
-        min-height: 500px;
-        &:after {
-            content: "";
-            clear: both;
-            display: block;
-        }
+        position: relative;
     }
 }
