--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -1,3 +1,7 @@
+
+// import colors palette
+@import './palette.less';
+
 #librairy {
     header[role="banner"] {
         padding: 0;
@@ -25,12 +29,12 @@
         display: block;
         width: 300px;
         border-right: 1px solid #CCC;
-        background: #F9F9F9;
+        background: @lib-panels-bg;
         box-sizing: border-box;
         h6 {
             margin: 20px 15px 8px;
             font-size: 14px;
-            color: #969696;
+            color: @lib-panels-titles;
             font-weight: bold;
         }
         ul {
@@ -46,15 +50,15 @@
             text-indent: 25px;
             text-decoration: none;
             &.selected {
-                background-color: #D2D2D2;
-                color: #000;
+                background-color: @lib-panels-selected-item-bg;
+                color: @lib-panels-selected-item;
             }
             &.dragover {
-                background-color: #969696;
-                color: #000;
+                background-color: @lib-panels-dragover-item-bg;
+                color: @lib-panels-selected-item;
             }
             &:active, &:hover {
-                color: #000;
+                color: @lib-panels-selected-item;
             }
         }
     }
@@ -67,7 +71,6 @@
             text-align: center;
             margin: 10px 0 0 10px;
             display: inline-block;
-            //background: yellow;
             font-size: 0;
         }
         article {
@@ -77,7 +80,7 @@
             line-height: 0em;
             &.selected {
                 padding: 1px;
-                border: 4px solid #575757;
+                border: 4px solid @lib-selected-thumb-border-color;
                 border-radius: 4px;
             }
             img {
@@ -88,6 +91,41 @@
             }
         }
     }
+    #contextual-menu {
+        position: fixed;
+        top: 300px;
+        left: 50%;
+        z-index: 1000;
+        font-size: medium;
+        display: block;
+        line-height: normal;
+        background-color: @blog-bg;
+        color: @blog-text;
+        background-color: @blog-bg;
+        border: 1px solid @blog-hr;
+        border-radius: 3px;
+        text-align: left;
+        hr {
+            margin: 0;
+        }
+        li {
+            margin: 10px 0;
+            border: none;
+            padding: 0;
+            width: auto;
+            white-space: nowrap;
+            position: relative;
+            a {
+                text-decoration: none;
+                display: block;
+                padding: 5px 20px;
+                &:hover, &:focus, &:active {
+                    background: @blog-hr;
+                }
+            }
+        }
+    }
+
 
     section[role="main"] {
         position: relative;
