add action to remove pict from portfolio.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -120,7 +120,7 @@
                 display: block;
                 padding: 5px 20px;
                 &:hover, &:focus, &:active {
-                    background: @blog-hr;
+                    background: @lib-context-menu-hover-bg;
                 }
             }
         }
