--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -72,6 +72,7 @@
             margin: 10px 0 0 10px;
             display: inline-block;
             font-size: 0;
+            //background: red;
         }
         article {
             display: inline-block;
