--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -69,10 +69,11 @@
             vertical-align: top;
             position: relative;
             text-align: center;
-            margin: 10px 0 0 10px;
+            //margin: 10px 0 0 10px;
+            padding: 10px 0 0 10px;
             display: inline-block;
             font-size: 0;
-            //background: red;
+            background: red;
         }
         article {
             display: inline-block;
