beginning of drag & drop ordering.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -73,7 +73,19 @@
             padding: 10px 0 0 10px;
             display: inline-block;
             font-size: 0;
-            background: red;
+            //background: yellow;
+        }
+        .basket-right, .basket-left {
+            box-sizing: border-box;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+        }
+        .basket-right {
+            border: 1px solid green;
+        }
+        .basket-left {
+            border: 1px solid red;
         }
         article {
             display: inline-block;
