drag & drop ordering ui works, need action and reducer.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -82,10 +82,10 @@
             bottom: 0;
         }
         .basket-right {
-            border: 1px solid green;
+            //border: 1px solid green;
         }
         .basket-left {
-            border: 1px solid red;
+            //border: 1px solid red;
         }
         article {
             display: inline-block;
