add a confirmation window to delete a picture.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -92,6 +92,14 @@ blockquote {
             top: 17px;
         }
     }
+    article {
+        padding: 22px;
+    }
+    footer {
+        padding: 10px 22px 5px;
+        border-top: 1px solid @blog-hr;
+        text-align: right;
+    }
     &.small {
         width: 500px;
     }
