--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -103,6 +103,20 @@
                 max-height: 100%;
                 max-width: 100%;
             }
+            footer {
+                text-align: right;
+            }
+        }
+        .delete-picture-confirm {
+            article {
+                display: block;
+            }
+            img {
+                display: block;
+                max-width: 200px;
+                max-height: 200px;
+                margin: 0 auto;
+            }
         }
     }
     #contextual-menu {
@@ -139,7 +153,6 @@
             }
         }
     }
-
 
     section[role="main"] {
         position: relative;
