--- a/src/less/common/palette.less
+++ b/src/less/common/palette.less
@@ -40,6 +40,7 @@
 @submit-button-hover-focus-bg: #575757; // submit and buttons :hover and :focus background
 @submit-button-hover-focus: #000; // submit and buttons :hover and :focus text color
 @submit-button-hover-focus-shadow: 0 0 3px #000; // submit and buttons :hover and :focus shadow
+@secondary-button-hover: #616161; // secondary submit buttons hover
 @valid: #3c763d; // valid
 @valid-border: @valid; // valid border
 //@valid-bg: #A1CDA1; // valid background
