add more style to delete picture confirmation modal.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -111,11 +111,14 @@
             article {
                 display: block;
             }
+            .thumb-wrapper {
+                text-align: center;
+            }
             img {
-                display: block;
+                display: inline-block;
                 max-width: 200px;
                 max-height: 200px;
-                margin: 0 auto;
+                margin: 0 10px 10px;
             }
         }
     }
