add all pictures view to librairy.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -64,6 +64,7 @@
     }
     #librairy-list {
         margin-left: 300px;
+        padding-bottom: 10px;
         min-height: 100vh;
         .thumb-wrapper {
             vertical-align: top;
